--- a/style.css
+++ b/style.css
@@ -568,3 +568,8 @@ summary::marker {
     padding: 1rem;
     text-align: center;
 }
+/* --- Corrección para el área clicable del Easter Egg del Título --- */
+#main-header h1 span {
+    display: inline-block;
+    line-height: 0.8; /* Reduce la altura invisible de cada letra */
+}
